--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cloudinary": "^2.5.1",
     "html2canvas": "^1.4.1",
+    "jsbarcode": "^3.11.6",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
